# musikat-mobile

./: .gitignore  README.md
apps/mobile/: app.json  package-lock.json  package.json
apps/mobile/src/api/: client.ts
apps/mobile/src/app/: _layout.tsx  index.tsx
apps/mobile/src/app/album/: [id].tsx
apps/mobile/src/app/player/: [id].tsx
apps/mobile/src/lib/: session.ts
apps/mobile/src/types/: api.ts
services/api/: .env.example  pyproject.toml
services/api/app/: __init__.py  config.py  database.py  main.py  models.py  navidrome.py  security.py
services/api/musikat_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/tests/: test_navidrome.py  test_security.py
